# bridge-name-service

./: Anchor.toml  Cargo.toml  README.md
.husky/: pre-commit
app/solana/: .solitarc.js  bridge_name_service-keypair.json  package.json
app/solana/.crates/: .crates2.json
app/solana/idl/: bridge_name_service.json
app/solana/src/: config.ts  constants.ts  main.ts
app/solana/src/name-house/: index.ts
app/solana/src/utils/: bridgeNameService.ts  name_house.ts
app/token-bridge-ui/: .env  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/token-bridge-ui/abi/: BNS.abi
app/token-bridge-ui/contracts/: BNS.json
app/token-bridge-ui/public/: index.html  relayerExample.json
app/token-bridge-ui/scripts/: copyContracts.js
app/token-bridge-ui/src/: App.js  config.ts  index.js  muiTheme.js  muiTheme.tsx
app/token-bridge-ui/src/components/: ButtonWithLoader.tsx  ChainSelect.tsx  ChainSelectArrow.tsx  ChainWarningMessage.tsx  EthereumSignerKey.tsx  EvmConnectWalletDialog.tsx  FeeMethodSelector.tsx  Footer.tsx  HeaderText.tsx  (+16 more)
contracts/: package.json  truffle-config.js
contracts/BNS/: BNS.sol
ethereum/: .env.example  foundry.toml  package.json  remappings.txt  truffle-config.js
ethereum/BNS/: BNS.sol
ethereum/abi/: BNS.abi
ethereum/migrations/: 1_deploy.js
programs/bridge-name-service/: Cargo.toml
programs/bridge-name-service/src/: constants.rs  errors.rs  lib.rs  pda.rs  uint.rs  utils.rs
programs/bridge-name-service/src/processor/: create_nft.rs  mod.rs  redeem_domain.rs  unwrap_domain.rs  wrap_domain.rs
programs/bridge-name-service/src/state/: ans_programs.rs  mod.rs
scripts/: install_foundry.sh
tests/nft-bridge/: Cargo.toml
tests/nft-bridge/src/: lib.rs
tests/sha/: Cargo.toml
tests/sha/src/: main.rs
(+150 files in other folders)
